syntax = "proto3";

package flyteidl.core;

option go_package = "github.com/flyteorg/flyteidl/gen/pb-go/flyteidl/core";

// Indicates a resource type within Flyte.
enum ResourceType {
  UNSPECIFIED        = 0;
  TASK               = 1;
  WORKFLOW           = 2;
  LAUNCH_PLAN        = 3;
  // A dataset represents an entity modeled in Flyte DataCatalog. A Dataset is also a versioned entity and can be a compilation of multiple individual objects.
  // Eventually all Catalog objects should be modeled similar to Flyte Objects. The Dataset entities makes it possible for the UI  and CLI to act on the objects 
  // in a similar manner to other Flyte objects
  DATASET            = 4;
}

// Encapsulation of fields that uniquely identifies a Flyte resource.
message Identifier {
    // Identifies the specific type of resource that this identifier corresponds to.
    core.ResourceType resource_type  = 1;

    // Name of the project the resource belongs to.
    string project              = 2;

    // Name of the domain the resource belongs to.
    // A domain can be considered as a subset within a specific project.
    string domain               = 3;

    // User provided value for the resource.
    string name                 = 4;

    // Specific version of the resource.
    string version              = 5;
}

// Encapsulation of fields that uniquely identifies a Flyte workflow execution
message WorkflowExecutionIdentifier {
    // Name of the project the resource belongs to.
    string project              = 1;

    // Name of the domain the resource belongs to.
    // A domain can be considered as a subset within a specific project.
    string domain               = 2;

    // User or system provided value for the resource.
    string name                 = 4;
}

// Encapsulation of fields that identify a Flyte node execution entity.
message NodeExecutionIdentifier {
    string node_id           = 1;

    WorkflowExecutionIdentifier execution_id        = 2;
}

// Encapsulation of fields that identify a Flyte task execution entity.
message TaskExecutionIdentifier {
    core.Identifier task_id           = 1;

    core.NodeExecutionIdentifier node_execution_id = 2;

    uint32 retry_attempt     = 3;
}

// Encapsulation of fields the uniquely identify a signal.
message SignalIdentifier {
    // Unique identifier for a signal.
    string signal_id = 1;

    // Identifies the Flyte workflow execution this signal belongs to.
    WorkflowExecutionIdentifier execution_id = 2;
}

message ArtifactKey {
  // Project and domain and suffix needs to be unique across a given artifact store.
  string project = 1;
  string domain = 2;
  string name = 3;
}

// Only valid for triggers
message ArtifactBindingData {
  uint32 index = 1;

  // These two fields are only relevant in the partition value case
  string partition_key = 2;
  string transform = 3;
}

message PartitionValue {
  string static_value = 1;
  ArtifactBindingData binding = 2;
}
message Partitions {
  map<string, PartitionValue> value = 1;
}

message ArtifactID {
  ArtifactKey artifact_key = 1;

  string version = 2;

  // Think of a partition as a tag on an Artifact, except it's a key-value pair.
  // Different partitions naturally have different versions (execution ids).
  // This is a oneof because of partition querying... we need a way to distinguish between
  // a user not-specifying partitions when searching, and specifically searching for an Artifact
  // that is not partitioned (this can happen if an Artifact goes from partitioned to non-
  // partitioned across executions).
  oneof dimensions {
       Partitions partitions = 3;
  }
}

message ArtifactTag {
  ArtifactKey artifact_key = 1;

  string value = 2;
}

// Uniqueness constraints for Artifacts
//  - project, domain, name, version, partitions
// Option 2 (tags are standalone, point to an individual artifact id):
//  - project, domain, name, alias (points to one partition if partitioned)
//  - project, domain, name, partition key, partition value
message ArtifactQuery {
  oneof identifier {
    ArtifactID artifact_id = 1;
    ArtifactTag artifact_tag = 2;
    string uri = 3;
    ArtifactBindingData binding = 4;
  }
}

message Trigger {
  // This will be set to a launch plan type, but note that this is different than the actual launch plan type.
  Identifier trigger_id = 1;

  // These are partial artifact IDs that will be triggered on
  // Consider making these ArtifactQuery instead.
  repeated core.ArtifactID triggers = 2;
}

